chore: update ci publish to only build & publish stuff in ./packages

--- a/.github/workflows/changesets_release.yml
+++ b/.github/workflows/changesets_release.yml
@@ -28,7 +28,7 @@ jobs:
           version-type: strict
           version-file: ".tool-versions"
       - run: pnpm install --frozen-lockfile
-      - run: pnpm -r build
+      - run: pnpm run -r --filter './packages/**' build
       - name: Create Release Pull Request or Publish
         id: changesets
         uses: changesets/action@v1
