Set Postgres config settings on CI in a version-independent way
Starting with Postgres 18, the PGDATA config for the Docker image has
changed and so the data directory path inside the container is different
from previous versions.

--- a/.github/workflows/elixir_tests.yml
+++ b/.github/workflows/elixir_tests.yml
@@ -56,10 +56,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      # https://github.com/orgs/community/discussions/126453#discussioncomment-11414956
       - name: Set PG settings
         run: |
-          docker exec ${{ job.services.postgres.id }} sh -c 'echo "wal_level=logical" >> /var/lib/postgresql/data/postgresql.conf'
-          docker exec ${{ job.services.postgres.id }} sh -c 'echo "max_replication_slots=100" >> /var/lib/postgresql/data/postgresql.conf'
+          docker exec ${{ job.services.postgres.id }} sh -c 'psql -U postgres -c "ALTER SYSTEM SET wal_level = '"'"'logical'"'"';"'
+          docker exec ${{ job.services.postgres.id }} sh -c 'psql -U postgres -c "ALTER SYSTEM SET max_replication_slots = 100;"'
           docker restart ${{ job.services.postgres.id }}
 
       - name: Seed the database
