Speed up the compilation of Elixir dependencies
Spawn 2 OS processes for compilation on CI to prevent the compilation of
native code from blocking Elixir code compilation, even if the CI runner
only has one core.

For Docker builds, spawning more processes should yield more improvement
since I suppose a typical Docker builder would have more than one core.
Locally I've seen good improvements at 4 OS processes. Increasing the
number further only shows marginal gains compared to 4.

--- a/.github/workflows/elixir_client_tests.yml
+++ b/.github/workflows/elixir_client_tests.yml
@@ -23,6 +23,7 @@ jobs:
         working-directory: packages/elixir-client
     env:
       MIX_ENV: test
+      MIX_OS_DEPS_COMPILE_PARTITION_COUNT: 2
       POSTGRES_VERSION: 140006
       ELECTRIC_PORT: 3100
       PG_PORT: 54323
@@ -74,7 +75,7 @@ jobs:
             ${{ runner.os }}-elixir-client-build-
 
       - name: Install dependencies
-        run: mix deps.get && mix deps.compile
+        run: mix do deps.get + deps.compile
 
       - name: Compiles without warnings
         run: mix compile --force --all-warnings --warnings-as-errors
