Update invocations of "mix do" to match the current convention

--- a/packages/elixir-client/package.json
+++ b/packages/elixir-client/package.json
@@ -3,6 +3,6 @@
   "private": true,
   "version": "0.7.3",
   "scripts": {
-    "publish:hex": "mix do deps.get, hex.publish --yes || true"
+    "publish:hex": "mix do deps.get + hex.publish --yes || true"
   }
 }
