--- a/website/data/team/team.yaml
+++ b/website/data/team/team.yaml
@@ -167,4 +167,18 @@
     'flag': 'gb',
     'published': true,
   },
+  {
+    "slug": "tudor",
+    "name": "Tudor Zaharia",
+    "job_title": "Staff Engineer",
+    "short_bio": "HPC enthusiast. Former CTO@quitt.ch. 8 to 64bit programmer. Maker of cophone.io. PGlite ♥",
+    "image": "/img/team/tudor.jpg",
+    "profile_uri": "https://www.linkedin.com/in/tdrz",
+    "profile_display_uri": "in/tdrz",
+    "profile_icon": "linkedin",
+    "location": "Lucerne",
+    "country": "Switzerland",
+    "flag": "ch",
+    "published": true
+  }
 ]
