fix linkedin social icon; fix tudor social icon

--- a/website/data/team/team.yaml
+++ b/website/data/team/team.yaml
@@ -168,17 +168,17 @@
     'published': true,
   },
   {
-    "slug": "tudor",
-    "name": "Tudor Zaharia",
-    "job_title": "Staff Engineer",
-    "short_bio": "HPC enthusiast. Former CTO@quitt.ch. 8 to 64bit programmer. Maker of cophone.io. PGlite ♥",
-    "image": "/img/team/tudor.jpg",
-    "profile_uri": "https://www.linkedin.com/in/tdrz",
-    "profile_display_uri": "in/tdrz",
-    "profile_icon": "linkedin",
-    "location": "Lucerne",
-    "country": "Switzerland",
-    "flag": "ch",
-    "published": true
-  }
+    'slug': 'tudor',
+    'name': 'Tudor Zaharia',
+    'job_title': 'Staff Engineer',
+    'short_bio': 'HPC enthusiast. Former CTO@quitt.ch. 8 to 64bit programmer. Maker of cophone.io. PGlite ♥',
+    'image': '/img/team/tudor.jpg',
+    'profile_uri': 'https://www.linkedin.com/in/tdrz',
+    'profile_display_uri': 'in/tdrz',
+    'profile_icon': 'social-linkedin',
+    'location': 'Lucerne',
+    'country': 'Switzerland',
+    'flag': 'ch',
+    'published': true,
+  },
 ]
