--- a/.prettierignore
+++ b/.prettierignore
@@ -18,3 +18,7 @@ website/**/*.md
 
 # Ignore CSS file with unstable Prettier formatting
 website/.vitepress/theme/custom.css
+
+# Ignore Elixir projects
+packages/sync-service
+packages/elixir-client
