--- a/.github/workflows/deploy_examples.yml
+++ b/.github/workflows/deploy_examples.yml
@@ -1,12 +1,10 @@
 name: Deploy Examples
 
-# Disabled: example deployments are currently broken
-# on:
-#   push:
-#     branches: ['main']
-#   pull_request:
-#     paths: ['examples/*/**']
 on:
+  push:
+    branches: ['main']
+  pull_request:
+    paths: ['examples/*/**']
   workflow_dispatch:
 
 concurrency:
