--- a/examples/tanstack-db-web-starter/package.json
+++ b/examples/tanstack-db-web-starter/package.json
@@ -20,51 +20,54 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
-    "@electric-sql/client": "^1.0.11",
+    "@electric-sql/client": "^1.2.0",
     "@tailwindcss/vite": "^4.0.6",
-    "@tanstack/electric-db-collection": "^0.1.23",
-    "@tanstack/react-db": "^0.1.21",
-    "@tanstack/react-router": "^1.132.2",
-    "@tanstack/react-router-devtools": "^1.132.2",
-    "@tanstack/react-start": "^1.132.3",
-    "@tanstack/router-plugin": "^1.132.3",
-    "@trpc/client": "^11.5.1",
-    "@trpc/server": "^11.5.1",
-    "better-auth": "^1.3.16",
-    "dotenv": "^17.2.1",
-    "drizzle-orm": "^0.44.5",
+    "@tanstack/electric-db-collection": "^0.2.8",
+    "@tanstack/react-db": "^0.1.52",
+    "@tanstack/react-router": "^1.139.7",
+    "@tanstack/react-router-devtools": "^1.139.7",
+    "@tanstack/react-start": "^1.139.9",
+    "@tanstack/router-plugin": "^1.139.7",
+    "@trpc/client": "^11.7.2",
+    "@trpc/server": "^11.7.2",
+    "better-auth": "^1.4.3",
+    "drizzle-kit": "^0.30.0",
+    "drizzle-orm": "^0.39.0",
     "drizzle-zod": "^0.7.1",
+    "lucide-react": "^0.544.0",
+    "nitro": "latest",
     "pg": "^8.16.3",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "tailwindcss": "^4.1.13",
-    "vite": "^7.1.7",
-    "vite-tsconfig-paths": "^5.1.4",
-    "zod": "^3.25.76"
+    "zod": "^4.0.14"
   },
   "devDependencies": {
     "@eslint/compat": "^1.3.1",
     "@eslint/js": "^9.32.0",
+    "@tanstack/devtools-vite": "^0.3.11",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/react": "^16.2.0",
-    "@types/pg": "^8.15.4",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
+    "@types/node": "^22.10.2",
+    "@types/pg": "^8.10.0",
+    "@types/react": "^19.2.0",
+    "@types/react-dom": "^19.2.0",
     "@typescript-eslint/eslint-plugin": "^8.38.0",
     "@typescript-eslint/parser": "^8.38.0",
-    "@vitejs/plugin-react": "^4.7.0",
-    "concurrently": "^9.2.0",
+    "@vitejs/plugin-react": "^5.0.4",
     "drizzle-kit": "^0.31.4",
+    "dotenv": "^17.2.1",
     "eslint": "^9.32.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.3",
     "eslint-plugin-react": "^7.37.5",
-    "globals": "^16.3.0",
-    "jsdom": "^26.0.0",
+    "jsdom": "^27.0.0",
     "prettier": "^3.6.2",
     "tsx": "^4.20.3",
     "typescript": "^5.7.2",
     "vite": "^7.1.7",
-    "web-vitals": "^5.0.3"
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.0.5",
+    "web-vitals": "^5.1.0"
   }
 }
