Use smaller pool size in dev and integration tests

--- a/packages/sync-service/.env.dev
+++ b/packages/sync-service/.env.dev
@@ -14,3 +14,4 @@ ELECTRIC_INSECURE=true
 
 ELECTRIC_TWEAKS_PROCESS_REGISTRY_PARTITIONS=1
 ELECTRIC_TWEAKS_HTTP_API_NUM_ACCEPTORS=1
+ELECTRIC_DB_POOL_SIZE=4
