--- a/packages/sync-service/.env.test
+++ b/packages/sync-service/.env.test
@@ -10,3 +10,4 @@ ELECTRIC_TEST_LOG_LEVEL=error
 
 DATABASE_URL=postgresql://postgres:password@localhost:54321/postgres?sslmode=disable
 ELECTRIC_QUERY_DATABASE_URL=postgresql://postgres:password@localhost:65432/postgres?sslmode=disable
+ELECTRIC_DB_POOL_SIZE=4
