config: avoid port clash between Electric and TanStack devtools.

--- a/examples/tanstack-db-web-starter/docker-compose.yaml
+++ b/examples/tanstack-db-web-starter/docker-compose.yaml
@@ -24,11 +24,11 @@ services:
     image: electricsql/electric:latest
     environment:
       DATABASE_URL: postgresql://postgres:password@postgres:5432/electric?sslmode=disable
-      # Not suitable for production. Only use insecure mode in development or if you've otherwise secured the Electric API.
+      # Not suitable for production.
       # See https://electric-sql.com/docs/guides/security
       ELECTRIC_INSECURE: true
     ports:
-      - "3000:3000"
+      - 30000:3000
     depends_on:
       - postgres
 
