Fix otel collector config in dev/

--- a/packages/sync-service/dev/otel-collector-honeycomb-config.yaml
+++ b/packages/sync-service/dev/otel-collector-honeycomb-config.yaml
@@ -45,7 +45,7 @@ service:
         - batch
       exporters:
         - otlp/honeycomb
-        - logging
+        - debug
     traces:
       receivers:
         - otlp
