--- a/.github/workflows/benchmarking.yml
+++ b/.github/workflows/benchmarking.yml
@@ -1,9 +1,8 @@
-name: Benchmark a PR alt
+name: Benchmark a PR
 
 on:
   issue_comment:
     types: [created]
-  workflow_dispatch:
 
 env:
   PROJECT_ID: vaxine
