try deploy examples to prod

--- a/.github/workflows/deploy_examples.yml
+++ b/.github/workflows/deploy_examples.yml
@@ -3,9 +3,8 @@ name: Deploy Examples
 on:
   push:
     branches: ['main']
-  pull_request:
-    paths: ['examples/*/**']
-  workflow_dispatch:
+#   pull_request:
+#     paths: ['examples/*/**']
 
 concurrency:
   group: ${{ github.event_name == 'push' && 'prod-deploy-group' || format('examples-pr-{0}', github.event.number) }}
