--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -23,7 +23,7 @@ jobs:
         working-directory: integration-tests
     env:
       MIX_ENV: dev
-      MAX_TARGET: application
+      MIX_TARGET: application
       MIX_OS_DEPS_COMPILE_PARTITION_COUNT: 4
     steps:
       - uses: actions/checkout@v4
