Listen for traces in Otel Collector config when running integration tests
This is done so that Electric doesn't fail exporting traces while
running a test. Otherwise, an error would get logged and trip up the
matching in Lux tests.

--- a/integration-tests/support_files/otel-collector-config.yaml
+++ b/integration-tests/support_files/otel-collector-config.yaml
@@ -18,3 +18,8 @@ service:
         - otlp
       exporters:
         - debug
+    traces:
+      receivers:
+        - otlp
+      exporters:
+        - debug
