Avoid rerunning all CI workflows while debugging failing integration tests

--- a/.github/workflows/autoformat.yml
+++ b/.github/workflows/autoformat.yml
@@ -11,10 +11,12 @@ on:
     paths-ignore:
       - 'website/**'
       - '**/README.md'
+      - 'integration-tests/**'
   pull_request:
     paths-ignore:
       - 'website/**'
       - '**/README.md'
+      - 'integration-tests/**'
 
 permissions:
   contents: read
