--- a/.github/workflows/docker_image_smoketest.yml
+++ b/.github/workflows/docker_image_smoketest.yml
@@ -6,10 +6,12 @@ on:
     paths-ignore:
       - 'website/**'
       - '**/README.md'
+      - 'integration-tests/**'
   pull_request:
     paths-ignore:
       - 'website/**'
       - '**/README.md'
+      - 'integration-tests/**'
 
 jobs:
   docker_image_smoketest:
