Changes in dependent packages shouldn't trigger the CI workflow for sync-service

--- a/.github/workflows/elixir_tests.yml
+++ b/.github/workflows/elixir_tests.yml
@@ -7,11 +7,17 @@ on:
       - 'website/**'
       - '**/README.md'
       - 'integration-tests/**'
+      - 'packages/**'
+      - '!packages/electric-telemetry'
+      - '!packages/sync-service'
   pull_request:
     paths-ignore:
       - 'website/**'
       - '**/README.md'
       - 'integration-tests/**'
+      - 'packages/**'
+      - '!packages/electric-telemetry'
+      - '!packages/sync-service'
 
 permissions:
   contents: read
