Avoid rerunning CI workflows when it's not necessary (#3555)

--- a/.github/workflows/elixir_tests.yml
+++ b/.github/workflows/elixir_tests.yml
@@ -6,10 +6,18 @@ on:
     paths-ignore:
       - 'website/**'
       - '**/README.md'
+      - 'integration-tests/**'
+      - 'packages/**'
+      - '!packages/electric-telemetry'
+      - '!packages/sync-service'
   pull_request:
     paths-ignore:
       - 'website/**'
       - '**/README.md'
+      - 'integration-tests/**'
+      - 'packages/**'
+      - '!packages/electric-telemetry'
+      - '!packages/sync-service'
 
 permissions:
   contents: read
