--- a/.github/workflows/ts_test.yml
+++ b/.github/workflows/ts_test.yml
@@ -42,6 +42,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
+      max-parallel: 3
       matrix:
         package_dir: ${{ fromJson(needs.list_ts_packages.outputs.directories) }}
     defaults:
@@ -64,6 +65,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
+      max-parallel: 3
       matrix:
         package_dir: ${{ fromJson(needs.list_ts_packages.outputs.directories) }}
     defaults:
@@ -162,6 +164,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
+      max-parallel: 3
       matrix:
         example_folder: ${{ fromJson(needs.list_examples.outputs.example_names) }}
     defaults:
