--- a/packages/y-electric/tsconfig.json
+++ b/packages/y-electric/tsconfig.json
@@ -6,8 +6,7 @@
     "lib": ["DOM", "ESNext"],
     "target": "ES2020",
     "module": "ESNext",
-    "moduleResolution": "node",
-    "types": ["vitest/globals"]
+    "moduleResolution": "node"
   },
   "include": ["src/**/*", "test/**/*"],
   "exclude": ["node_modules", "dist", "**/*.test.ts", "**/*.spec.ts"]
