Add permissions to changesets workflow

--- a/.github/workflows/changesets_release.yml
+++ b/.github/workflows/changesets_release.yml
@@ -9,7 +9,8 @@ concurrency: ${{ github.workflow }}-${{ github.ref }}
 
 permissions:
   id-token: write # Required for OIDC
-  contents: read
+  contents: write # Required to push tags and create releases
+  pull-requests: write # Required for changesets to create PRs
 
 jobs:
   changesets:
